# Sift-Letter

./: .gitignore  LICENSE  README.md  ai_processor.py  delivery.py  main.py  market_data.py  pyproject.toml  scraper.py  utils.py
.claude/: settings.local.json
.github/workflows/: daily_newsletter.yml
modules/: ai_processor.py  delivery.py  market_data.py  scraper.py  utils.py
