[project]
name = "sift-letter"
version = "0.1.0"
description = "Automated AI-powered finance newsletter that scrapes, curates, and delivers daily market digests"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.49.0",
    "google-generativeai>=0.8.6",
    "groq>=0.18.0",
    "openai>=1.75.0",
    "resend>=2.26.0",
    "scrapling>=0.4.2",
    "yfinance>=1.2.0",
]
